# orbital-studios-trial

./: .gitignore  Cargo.toml  build.rs  config.yaml  config.yaml.example
src/: config.rs  database.rs  embed_builder.rs  event_handler.rs  log.rs  main.rs
src/commands/: ban.rs  cat.rs  info.rs  kick.rs  mod.rs  ping.rs  purge.rs  random.rs  say.rs
