[package]
name = "orbital-studios-trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
colored = "2.0.4"
mongodb = "2.6.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_yaml = "0.9.25"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "builder", "cache", "http", "model", "utils"] }
time = { version = "0.3.23", features = ["formatting", "macros"] }
tokio = { version = "1.29.1", features = ["full"] }

[build-dependencies]
winres = "0.1.12"
